fix: font color in dark mode

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -74,12 +74,6 @@ button {
   margin-bottom: 10px;
   border-color: var(--lines-color);
 }
-
-/* .search-bar{
-} */
-
-
-
 .select-wrap 
 {
   border: 1px solid var(--lines-color);
@@ -93,7 +87,6 @@ button {
 {
   font-size:10px;
   text-transform: uppercase;
-  color: var(--body-text);
   padding: 2px 8px 0;
 }
 
@@ -177,7 +170,6 @@ img {
 /** footer **/
 
 footer{
-  /* margin-top: auto; */
   text-align: center;
 }
 
